[tool.poetry]
name = "reddit-api-task"
version = "0.1.0"
description = "Print latest posts from subreddit"
authors = ["Alina Strashevichutse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
